--- a/tournaments/under25.html
+++ b/tournaments/under25.html
@@ -185,36 +185,36 @@
                     <div class="round round-two current">
                         <div class="round-details">Round 2<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Odeya Rush<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Alica Schmidt<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5f8v" target="_blank">Odeya Rush<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5f8v" target="_blank">Alica Schmidt<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Natalie Alyn Lind<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Brec Bassinger<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5evi" target="_blank">Natalie Alyn Lind<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5evi" target="_blank">Brec Bassinger<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Sabrina Carpenter<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Sadie Stanley<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5fhl" target="_blank">Sabrina Carpenter<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5fhl" target="_blank">Sadie Stanley<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Rodrigo<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Camila Morrone<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5fcz" target="_blank">Olivia Rodrigo<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5fcz" target="_blank">Camila Morrone<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Peyton List</Li><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Kiernan Shipka<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5geq" target="_blank">Peyton List</Li><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5geq" target="_blank">Kiernan Shipka<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Ariel Winter<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Madelyn Cline<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5g6x" target="_blank">Ariel Winter<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5g6x" target="_blank">Madelyn Cline<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Sistine Stallone<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Mackenzie Foy<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5gho" target="_blank">Sistine Stallone<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5gho" target="_blank">Mackenzie Foy<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Kaia Gerber<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Maisie Williams<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5gah" target="_blank">Kaia Gerber<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ue5gah" target="_blank">Maisie Williams<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND TWO -->
@@ -325,20 +325,20 @@
                             <li class="team team-top name-details"><a href="javascript:void(0);">Katelyn Nacon<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Madison Beer<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Ester Expósito<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Scott Welch<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Elle Fanning<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Malina Weissman<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Lilly Krug<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Rachel Zegler<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">April Benayoum<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND TWO -->
@@ -388,45 +388,45 @@
                         </ul>
                         <p class="group-details">Group G</p>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2xt" target="_blank">Iman Vellani<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2xt" target="_blank">Iman Vellani<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2xt" target="_blank">Madison Beer<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2xt" target="_blank">Raye<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2xt" target="_blank">Raye<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2vc" target="_blank">Nicole Maines<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2vc" target="_blank">Nicole Maines<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2vc" target="_blank">Ester Expósito<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2vc" target="_blank">Emma Fuhrmann<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2vc" target="_blank">Emma Fuhrmann<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2t8" target="_blank">Ella Bleu Travolta<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2t8" target="_blank">Rowan Blanchard<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2t8" target="_blank">Ella Bleu Travolta<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2t8" target="_blank">Rowan Blanchard<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2t8" target="_blank">Olivia Scott Welch<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2qj" target="_blank">Elle fanning<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2qj" target="_blank">Lou Jean<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2qj" target="_blank">Danielle Rose Russell<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2qj" target="_blank">Lou Jean<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg2qj" target="_blank">Danielle Rose Russell<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <p class="group-details">Group H</p>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg47i" target="_blank">Malina Weissman<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg47i" target="_blank">Zoï Sévérin<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg47i" target="_blank">Axelle Dodier<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg47i" target="_blank">Zoï Sévérin<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg47i" target="_blank">Axelle Dodier<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg3iq" target="_blank">Lily-Rose Depp<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg3iq" target="_blank">Naomi Osaka<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg3iq" target="_blank">Lily-Rose Depp<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg3iq" target="_blank">Naomi Osaka<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg3iq" target="_blank">Lilly Krug<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg43h" target="_blank">Camren Bicondova<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg43h" target="_blank">Camren Bicondova<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg43h" target="_blank">Rachel Zegler<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg43h" target="_blank">Emilia Fester<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg43h" target="_blank">Emilia Fester<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg3fw" target="_blank">Lana Condor<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg3fw" target="_blank">Lana Condor<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg3fw" target="_blank">April Benayoum<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg3fw" target="_blank">Jamie Chadwick<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ubg3fw" target="_blank">Jamie Chadwick<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND ONE -->
