--- a/tournaments/under25.html
+++ b/tournaments/under25.html
@@ -221,20 +221,20 @@
                     <div class="round round-three current">
                         <div class="round-details">Round 3A<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Alica Schmidt<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Natalie Alyn Lind<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g1i" target="_blank">Alica Schmidt<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g1i" target="_blank">Natalie Alyn Lind<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Sabrina Carpenter<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Olivia Rodrigo<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8gay" target="_blank">Sabrina Carpenter<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8gay" target="_blank">Olivia Rodrigo<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Peyton List<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Madelyn Cline<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g6w" target="_blank">Peyton List<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g6w" target="_blank">Madelyn Cline<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Mackenzie Foy<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Maisie Williams<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g57" target="_blank">Mackenzie Foy<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g57" target="_blank">Maisie Williams<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND THREE -->
@@ -289,20 +289,20 @@
                     <div class="round round-three current">
                         <div class="round-details">Round 3B<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8hbl" target="_blank">Thomasin McKenzie<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8hbl" target="_blank">Joey King<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8h9p" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8h9p" target="_blank">Isabela Merced<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g3b" target="_blank">Madison Beer<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g3b" target="_blank">Elle Fanning<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g92" target="_blank">Lilly Krug<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g92" target="_blank">Rachel Zegler<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND THREE -->
@@ -310,35 +310,35 @@
                         <div class="round-details">Round 2<br /></div>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3jgi" target="_blank">Thomasin McKenzie<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3jgi" target="_blank">Sadie Sink<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3jgi" target="_blank">Sadie Sink<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3ii3" target="_blank">Sophie Nélisse<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3ii3" target="_blank">Sophie Nélisse<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3ii3" target="_blank">Joey King<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3iet" target="_blank">Mimi Keene<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3iet" target="_blank">Mimi Keene<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3iet" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3gjp" target="_blank">Isabela Merced<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3gjp" target="_blank">Katelyn Nacon<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3gjp" target="_blank">Katelyn Nacon<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3k5x" target="_blank">Madison Beer<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3k5x" target="_blank">Ester Expósito<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3k5x" target="_blank">Ester Expósito<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3kew" target="_blank">Olivia Scott Welch<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3kew" target="_blank">Olivia Scott Welch<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3kew" target="_blank">Elle Fanning<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3k93" target="_blank">Malina Weissman<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3k93" target="_blank">Malina Weissman<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3k93" target="_blank">Lilly Krug<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3khn" target="_blank">Rachel Zegler<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3khn" target="_blank">April Benayoum<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/ug3khn" target="_blank">April Benayoum<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND TWO -->
