--- a/tournaments/under25.html
+++ b/tournaments/under25.html
@@ -221,32 +221,32 @@
                     <div class="round round-three current">
                         <div class="round-details">Round 3A<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g1i" target="_blank">Alica Schmidt<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g1i" target="_blank">Alica Schmidt<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g1i" target="_blank">Natalie Alyn Lind<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8gay" target="_blank">Sabrina Carpenter<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8gay" target="_blank">Sabrina Carpenter<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8gay" target="_blank">Olivia Rodrigo<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g6w" target="_blank">Peyton List<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g6w" target="_blank">Peyton List<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g6w" target="_blank">Madelyn Cline<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g57" target="_blank">Mackenzie Foy<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g57" target="_blank">Maisie Williams<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g57" target="_blank">Maisie Williams<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND THREE -->
                     <div class="round quarterfinals current">
                         <div class="round-details">Quarterfinals<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo20ih" target="_blank">Natalie Alyn Lind<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo20ih" target="_blank">Olivia Rodrigo<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo2079" target="_blank">Madelyn Cline<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo2079" target="_blank">Mackenzie Foy<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -278,30 +278,30 @@
                     <div class="round quarterfinals current">
                         <div class="round-details">Quarterfinals<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo219v" target="_blank">Thomasin McKenzie<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo219v" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo213u" target="_blank">Madison Beer<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo213u" target="_blank">Rachel Zegler<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="round round-three current">
                         <div class="round-details">Round 3B<br /></div>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8hbl" target="_blank">Thomasin McKenzie<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8hbl" target="_blank">Joey King<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8hbl" target="_blank">Joey King<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8h9p" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8h9p" target="_blank">Isabela Merced<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8h9p" target="_blank">Isabela Merced<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g3b" target="_blank">Madison Beer<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g3b" target="_blank">Elle Fanning<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g3b" target="_blank">Elle Fanning<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g92" target="_blank">Lilly Krug<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g92" target="_blank">Lilly Krug<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g92" target="_blank">Rachel Zegler<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
