--- a/tournaments/under25.html
+++ b/tournaments/under25.html
@@ -283,7 +283,7 @@
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo213u" target="_blank">Madison Beer<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo213u" target="_blank">Rachel Zegler<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/uo2s5t/hottest_celeb_under_25_quarterfinals_lilly_krug/" target="_blank">Lilly Krug<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="round round-three current">
@@ -301,8 +301,8 @@
                             <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g3b" target="_blank">Elle Fanning<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
-                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g92" target="_blank">Lilly Krug<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g92" target="_blank">Rachel Zegler<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g92" target="_blank">Lilly Krug<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uk8g92" target="_blank">Rachel Zegler<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <!-- END ROUND THREE -->
