--- a/tournaments/under25.html
+++ b/tournaments/under25.html
@@ -241,12 +241,12 @@
                     <div class="round quarterfinals current">
                         <div class="round-details">Quarterfinals<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo20ih" target="_blank">Natalie Alyn Lind<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo20ih" target="_blank">Natalie Alyn Lind<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo20ih" target="_blank">Olivia Rodrigo<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo2079" target="_blank">Madelyn Cline<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo2079" target="_blank">Mackenzie Foy<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo2079" target="_blank">Mackenzie Foy<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -254,8 +254,8 @@
                     <div class="semis-l current">
                         <div class="round-details">Semifinals 1 <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/urh3e2/hottest_celeb_under_25_semifinal_1_olivia_rodrigo/" target="_blank">Olivia Rodrigo<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/urh3e2/hottest_celeb_under_25_semifinal_1_olivia_rodrigo/" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="final current">
@@ -269,8 +269,8 @@
                     <div class="semis-r current">
                         <div class="round-details">Semifinals 2 <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Madelyn Cline<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Madison Beer<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                 </div>
@@ -278,12 +278,12 @@
                     <div class="round quarterfinals current">
                         <div class="round-details">Quarterfinals<br /></div>
                         <ul class="matchup">
-                            <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo219v" target="_blank">Thomasin McKenzie<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo219v" target="_blank">Thomasin McKenzie<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo219v" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
                         </ul>
                         <ul class="matchup">
                             <li class="team team-top name-details"><a href="https://reddit.com/r/CelebBattles/comments/uo213u" target="_blank">Madison Beer<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/uo2s5t/hottest_celeb_under_25_quarterfinals_lilly_krug/" target="_blank">Lilly Krug<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/uo2s5t/hottest_celeb_under_25_quarterfinals_lilly_krug/" target="_blank">Lilly Krug<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="round round-three current">
