--- a/tournaments/under25.html
+++ b/tournaments/under25.html
@@ -254,7 +254,7 @@
                     <div class="semis-l current">
                         <div class="round-details">Semifinals 1 <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/urh3e2/hottest_celeb_under_25_semifinal_1_olivia_rodrigo/" target="_blank">Olivia Rodrigo<span class="score">&nbsp;</span></a></li>
+                            <li class="loser team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/urh3e2/hottest_celeb_under_25_semifinal_1_olivia_rodrigo/" target="_blank">Olivia Rodrigo<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/urh3e2/hottest_celeb_under_25_semifinal_1_olivia_rodrigo/" target="_blank">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
@@ -262,15 +262,15 @@
                         <i class="fa fa-trophy"></i>
                         <div class="round-details">Grand Finale <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="javascript:void(0);">Sydney Sweeney<span class="score">&nbsp;</span></a></li>
                             <li class="team team-top round-details"><a href="javascript:void(0);"><span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                     <div class="semis-r current">
                         <div class="round-details">Semifinals 2 <br /></div>
                         <ul class="matchup championship">
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Madelyn Cline<span class="score">&nbsp;</span></a></li>
-                            <li class="team team-top name-details"><a href="javascript:void(0);">Madison Beer<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/uu4w9c/hottest_celeb_under_25_semifinal_2_madison_beer/" target="_blank">Madelyn Cline<span class="score">&nbsp;</span></a></li>
+                            <li class="team team-top name-details"><a href="https://www.reddit.com/r/CelebBattles/comments/uu4w9c/hottest_celeb_under_25_semifinal_2_madison_beer/" target="_blank">Madison Beer<span class="score">&nbsp;</span></a></li>
                         </ul>
                     </div>
                 </div>
